// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components Tabbar should renders correctly 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#F8F7F7",
      "borderColor": "#979797",
      "borderTopWidth": 0.5,
      "flexDirection": "row",
      "height": 48,
      "paddingBottom": 0,
    }
  }
>
  <Connect(ActionSheet) />
  <DummyTouchableNativeFeedback
    key="Contacts"
    onPress={[Function]}
  >
    <Component
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "padding": 4,
        }
      }
    >
      <Icon
        allowFontScaling={false}
        color="#8d8d8d"
        name="users"
        size={25}
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#8d8d8d",
              "fontSize": 10,
            },
            undefined,
          ]
        }
      >
        Contacts
      </Text>
    </Component>
  </DummyTouchableNativeFeedback>
  <DummyTouchableNativeFeedback
    key="Add"
    onPress={[Function]}
  >
    <Component
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "padding": 4,
        }
      }
    >
      <Icon
        allowFontScaling={false}
        color="#8d8d8d"
        name="plus-circled"
        size={25}
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#8d8d8d",
              "fontSize": 10,
            },
            undefined,
          ]
        }
      >
        Add
      </Text>
    </Component>
  </DummyTouchableNativeFeedback>
  <DummyTouchableNativeFeedback
    key="Settings"
    onPress={[Function]}
  >
    <Component
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "padding": 4,
        }
      }
    >
      <Icon
        allowFontScaling={false}
        color="#8d8d8d"
        name="cog"
        size={25}
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#8d8d8d",
              "fontSize": 10,
            },
            undefined,
          ]
        }
      >
        Settings
      </Text>
    </Component>
  </DummyTouchableNativeFeedback>
</Component>
`;

exports[`Components Tabbar should renders correctly 2`] = `
<Component
  style={
    Object {
      "backgroundColor": "#F8F7F7",
      "borderColor": "#979797",
      "borderTopWidth": 0.5,
      "flexDirection": "row",
      "height": 48,
      "paddingBottom": 0,
    }
  }
>
  <Connect(ActionSheet) />
  <DummyTouchableNativeFeedback
    key="Contacts"
    onPress={[Function]}
  >
    <Component
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "padding": 4,
        }
      }
    >
      <Icon
        allowFontScaling={false}
        color="#1361cb"
        name="users"
        size={25}
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#8d8d8d",
              "fontSize": 10,
            },
            Object {
              "color": "#1361cb",
            },
          ]
        }
      >
        Contacts
      </Text>
    </Component>
  </DummyTouchableNativeFeedback>
  <DummyTouchableNativeFeedback
    key="Add"
    onPress={[Function]}
  >
    <Component
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "padding": 4,
        }
      }
    >
      <Icon
        allowFontScaling={false}
        color="#8d8d8d"
        name="plus-circled"
        size={25}
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#8d8d8d",
              "fontSize": 10,
            },
            undefined,
          ]
        }
      >
        Add
      </Text>
    </Component>
  </DummyTouchableNativeFeedback>
  <DummyTouchableNativeFeedback
    key="Settings"
    onPress={[Function]}
  >
    <Component
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "padding": 4,
        }
      }
    >
      <Icon
        allowFontScaling={false}
        color="#8d8d8d"
        name="cog"
        size={25}
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#8d8d8d",
              "fontSize": 10,
            },
            undefined,
          ]
        }
      >
        Settings
      </Text>
    </Component>
  </DummyTouchableNativeFeedback>
</Component>
`;

exports[`Components Tabbar should renders correctly 3`] = `
<Component
  style={
    Object {
      "backgroundColor": "#F8F7F7",
      "borderColor": "#979797",
      "borderTopWidth": 0.5,
      "flexDirection": "row",
      "height": 48,
      "paddingBottom": 0,
    }
  }
>
  <Connect(ActionSheet) />
  <DummyTouchableNativeFeedback
    key="Contacts"
    onPress={[Function]}
  >
    <Component
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "padding": 4,
        }
      }
    >
      <Icon
        allowFontScaling={false}
        color="#1361cb"
        name="users"
        size={25}
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#8d8d8d",
              "fontSize": 10,
            },
            Object {
              "color": "#1361cb",
            },
          ]
        }
      >
        Contacts
      </Text>
    </Component>
  </DummyTouchableNativeFeedback>
  <DummyTouchableNativeFeedback
    key="Add"
    onPress={[Function]}
  >
    <Component
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "padding": 4,
        }
      }
    >
      <Icon
        allowFontScaling={false}
        color="#8d8d8d"
        name="plus-circled"
        size={25}
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#8d8d8d",
              "fontSize": 10,
            },
            undefined,
          ]
        }
      >
        Add
      </Text>
    </Component>
  </DummyTouchableNativeFeedback>
  <DummyTouchableNativeFeedback
    key="Settings"
    onPress={[Function]}
  >
    <Component
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "padding": 4,
        }
      }
    >
      <Icon
        allowFontScaling={false}
        color="#8d8d8d"
        name="cog"
        size={25}
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#8d8d8d",
              "fontSize": 10,
            },
            undefined,
          ]
        }
      >
        Settings
      </Text>
    </Component>
  </DummyTouchableNativeFeedback>
</Component>
`;
